[package]
name = "socksy"
version = "0.1.0"
edition = "2021"
authors = ["Stuart Reilly <stu@reilly-family.co.uk>"]
license = "MIT"
description = "Dirt simple SOCKS5 CONNECT proxy which binds a network interface"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
figment = { version = "0.10.16", features = ["env"] }
network-interface = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
socks5-server = "0.10.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"